// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has consistent defaults 1`] = `
Object {
  "absolute": [Function],
  "appJsConfig": "e2e/basic/jsconfig.json",
  "appMain": "e2e/basic/index.js",
  "appTsConfig": "e2e/basic/tsconfig.json",
  "appWebpackCache": "e2e/basic/node_modules/.cache",
  "includeModule": [Function],
  "modules": "e2e/basic/node_modules",
  "packageJson": "e2e/basic/package.json",
  "production": Object {
    "favicon": "e2e/basic/web-build/favicon.ico",
    "folder": "e2e/basic/web-build",
    "get": [Function],
    "indexHtml": "e2e/basic/web-build/index.html",
    "manifest": "e2e/basic/web-build/manifest.json",
    "serveJson": "e2e/basic/web-build/serve.json",
  },
  "root": "e2e/basic",
  "servedPath": "/",
  "template": Object {
    "favicon": "web-default/favicon.ico",
    "folder": "web-default",
    "get": [Function],
    "indexHtml": "web-default/index.html",
    "manifest": "web-default/manifest.json",
    "serveJson": "web-default/serve.json",
  },
}
`;

exports[`uses a custom public path from the homepage field of a project's package.json 1`] = `"/homepage-defined/"`;

exports[`works with no app.json 1`] = `
Object {
  "absolute": [Function],
  "appJsConfig": "e2e/minimum/jsconfig.json",
  "appMain": "e2e/minimum/index.js",
  "appTsConfig": "e2e/minimum/tsconfig.json",
  "appWebpackCache": "e2e/minimum/node_modules/.cache",
  "includeModule": [Function],
  "modules": "e2e/minimum/node_modules",
  "packageJson": "e2e/minimum/package.json",
  "production": Object {
    "favicon": "e2e/minimum/web-build/favicon.ico",
    "folder": "e2e/minimum/web-build",
    "get": [Function],
    "indexHtml": "e2e/minimum/web-build/index.html",
    "manifest": "e2e/minimum/web-build/manifest.json",
    "serveJson": "e2e/minimum/web-build/serve.json",
  },
  "root": "e2e/minimum",
  "servedPath": "/",
  "template": Object {
    "favicon": "web-default/favicon.ico",
    "folder": "web-default",
    "get": [Function],
    "indexHtml": "web-default/index.html",
    "manifest": "web-default/manifest.json",
    "serveJson": "web-default/serve.json",
  },
}
`;
